# Cpp_PlyLoader_for_Unity

./: .gitignore  CMakeLists.txt  PlyLoaderAPI.cpp  PlyLoaderAPI.h  PlyParser.cpp  PlyParser.h  PointCloud.h  README.md  main.cpp
.claude/: settings.json
Unity/: PlyLoaderPlugin.cs  PointCloudShader.shader
